# primer

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRITICAL-REVIEW-2026-06-14.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  REMEDIATION-QUEUE.md  SECURITY.md  codecov.yml  config.example.yaml  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  e2e.yml  pr-issue-link.yml  release.yml
brand/: README.md
docker/matrix/: entrypoint.sh
docker/postgres/: init.sql
docker/primer/: entrypoint.sh
docs/agents/: _README.md  agents.md  auth-and-tokens.md  channels.md  chats.md  graphs.md  harnesses.md  knowledge.md  mcp-exposure.md  semantic-search.md  sessions.md  tool-approval.md  triggers-and-subscriptions.md  workspaces.md  yielding.md
docs/dev/: CONTRIBUTING.md  README.md  deferred-from-specs.md  docs-site.md
docs/tests/: FINDINGS.md
matrix/: cli.py  internal_collections.py
matrix/agent/: __init__.py  approval.py  base.py  compaction.py  events.py  executor.py  loop.py  prompts.py  rego.py  tail.py  tool_manager.py  workspace_executor.py
matrix/api/: __init__.py  __main__.py  app.py  config.py  deps.py  errors.py  pagination.py
matrix/bootstrap/: defaults.py  runner.py
matrix/bus/: __init__.py  host_inotify_probe.py  in_memory.py  listener.py  mcp_tasks.py  postgres.py  scheduler_tasks.py  watcher.py  ws_watch_probe.py
matrix/catalog/: __init__.py  catalog.py
matrix/channel/: __init__.py  adapter.py  dispatcher.py  factory.py  inbox.py  null_adapter.py
matrix/chat/: __init__.py  dispatch.py  executor.py  tick_router.py
matrix/claim/: factory.py  in_memory.py  postgres.py  sql.py
matrix/common/: __init__.py  anthropic_errors.py  google_errors.py  log.py  mcp_errors.py  openai_errors.py
matrix/coordinator/: factory.py  in_memory.py  postgres.py  sweeper.py
matrix/cross_encoder/: __init__.py  huggingface.py
matrix/embedder/: __init__.py  gemini.py  huggingface.py  openai.py
matrix/graph/: __init__.py  base.py  executor.py  router.py  template.py  workspace_executor.py
matrix/harness/: diff.py  dispatch.py  git.py  hashes.py  service.py  template.py
matrix/ingest/: __init__.py  ingester.py  loader.py  splitter.py
matrix/int/: __init__.py  claim.py  cross_encoder.py  embedder.py  llm.py  sandbox.py  scheduler.py  storage.py  storage_provider.py  toolset.py  vector_store.py  vector_store_provider.py  workspace.py
matrix/llm/: __init__.py  anthropic.py  gemini.py  ollama.py  openresponses.py
matrix/model/: agent.py  channel.py  chat.py  chats.py  collection.py  common.py  embedding.py  except_.py  graph.py  harness.py  ingest.py  internal.py  llm.py  provider.py  scheduler.py  session.py  storage.py  thread.py  tool_approval.py  vector.py  workspace.py  workspace_session.py  yield_.py
matrix/observability/: logging_integration.py  metrics.py  tracing.py
matrix/scheduler/: __init__.py  factory.py  in_memory.py  postgres.py
matrix/search/: __init__.py  searcher.py
matrix/session/: dispatch.py  persistence.py  tick_router.py
matrix/storage/: __init__.py  _cursor.py  _predicate.py  _sqlite_predicate.py  factory.py  postgres.py  q.py  sqlite.py
matrix/toolset/: __init__.py  harness.py  internal.py  mcp.py  misc.py  search.py  system.py  workspaces.py
matrix/vector/: __init__.py  factory.py  lance.py  pgvector.py  pgvectorscale.py
matrix/worker/: __init__.py  pool.py  turn.py  yield_resume_registry.py  yield_runtime.py
matrix/workspace/: __init__.py  cache.py  factory.py  local.py  session.py  state.py  tool.py
primectl/: README.md  pyproject.toml
primectl/primectl/: __init__.py  client.py  config.py  discovery.py  errors.py  filters.py  main.py  manifest.py  output.py  registry.py  session.py
primectl/primectl/commands/: call.py  channel.py  chat.py  config_cmd.py  crud.py  doc.py  meta.py  raw.py  session.py  tap.py  workspace.py
primectl/tests/: conftest.py  test_aggregated_llm_roundtrip.py  test_client.py  test_cmd_apply.py  test_cmd_call.py  test_cmd_channel.py  test_cmd_chat.py  test_cmd_config.py  test_cmd_doc.py  test_cmd_get.py  test_cmd_meta.py  test_cmd_session.py  test_cmd_workspace.py  test_config.py  test_discovery.py  test_errors.py  test_filters.py  test_manifest.py  test_output.py  test_registry_crud.py  test_registry_custom_ops.py  test_session.py  test_smoke.py  test_tap_command.py
primectl/tests/fixtures/: openapi_sample.json
primer/: __main__.py  ai_docs_path.py  authz.py  cli.py  internal_collections.py  user_docs_lint.py  user_docs_service.py
primer/agent/: __init__.py  approval.py  approval_record.py  base.py  compaction.py  compaction_mixin.py  events.py  executor.py  inform.py  invoke.py  loop.py  prompt_render.py  prompts.py  rego.py  tail.py  tool_manager.py  (+1 more)
runtime/: Dockerfile  README.md  pyproject.toml
runtime/matrix_runtime/: __main__.py  exec.py  ops.py  protocol.py  server.py  watch.py
runtime/primer_runtime/: __main__.py  exec.py  locks.py  ops.py  protocol.py  pty_op.py  server.py  watch.py
runtime/tests/: test_entrypoint.py  test_locks.py  test_ops.py  test_server.py  test_watch.py
scripts/: audit_touch_targets.py  docs_verifier.py
skills/: using-primer-over-mcp.md
tests/: conftest.py  test_agent_docs.py  test_agent_models.py  test_anthropic_errors.py  test_authz.py  test_chat.py  test_cli.py  test_collection.py  test_common.py  test_cross_encoder_provider.py  test_except.py  test_google_errors.py  test_harness_model.py  test_internal_collections.py  test_log.py  test_openai_errors.py  test_primectl_version.py  test_provider.py  test_scheduler_abc.py  test_scheduler_config.py  test_session_models.py  test_vector_store_config.py  test_workspace_models.py  testconfig.example.yaml
ui/: app.jsx  docs-embed-directive-test.html  docs-embed-spike.html  index.html  styles.css  tweaks-panel.jsx
(+2011 files in other folders)
