[project]
name = "primer"
version = "0.0.1"
description = "Microagents framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiodocker>=0.21",
    "aiosqlite>=0.20",
    "aiohttp>=3.11",
    "anthropic>=0.97.0",
    "asyncpg>=0.30.0",
    "croniter>=2.0.5",
    "ddgs>=9.0",
    "docling>=2.0",
    "fastapi>=0.115",
    "google-genai>=1.73.1",
    "grpcio>=1.60.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.20",
    "kubernetes-asyncio>=32.0",
    "lancedb>=0.15",
    "mcp>=1.16.0",
    "ollama>=0.6.1",
    "openai>=1.50.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-asyncpg>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "prometheus-client>=0.20.0",
    "pgvector>=0.3.6",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.6",
    "regopy>=0.4",
    "discord.py>=2.4",
    "python-telegram-bot>=21.0",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0",
    "sentence-transformers>=3.0.0",
    "slack-bolt>=1.20",
    "slack-sdk>=3.27",
    "transformers>=5.6.2",
    "typer>=0.12",
    "tzdata>=2026.2",
    "uvicorn[standard]>=0.32",
    "opentelemetry-instrumentation-logging>=0.41b0",
]

[project.scripts]
primer = "primer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["primer"]

[dependency-groups]
dev = [
    "grpcio-tools>=1.60.0",
    "playwright>=1.49.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
    "pytest-playwright>=0.6.2",
    "respx>=0.21.1",
    "testcontainers[postgres]>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = [".", "runtime"]
# tests/e2e/ is skipped unless MATRIX_RUN_E2E=1 is set in the environment
# (see tests/e2e/conftest.py). The harness sets the env var; default unit
# runs do not, so contributors running `uv run pytest` aren't bothered by
# the e2e tests' need for a live server.
# tests/distributed/ requires testcontainers + Docker; opt in with
# `uv run pytest tests/distributed/ -m distributed`. Default runs skip them.
addopts = "-m 'not distributed'"
markers = [
    "distributed: requires testcontainers + multiprocess (deselect with -m 'not distributed')",
]

[tool.coverage.run]
source = ["primer"]
omit = [
    "primer/test.py",
    "primer/test_compaction.py",   # hand-driven LLM probe script (research/compaction.md)
    "primer/*/test_*.py",
    # Embedding data types — exercised once the embedder adapters and their
    # tests land in a later sub-project.
    "primer/model/embedding.py",
    # CLI entry point — only invoked via `python -m primer.api`; needs
    # a live Postgres to run, so not covered by the unit suite.
    "primer/api/__main__.py",
    # Typer CLI launcher — uvicorn invocation requires a live Postgres,
    # so the no-cover lines are the uvicorn.run() and main() shims.
    # The pure helpers (_load_config, _apply_logging) and the command
    # functions are exercised by tests/test_cli.py via a CliRunner with
    # uvicorn patched out.
    # Postgres scheduler — exercised by tests/scheduler/test_postgres.py
    # which gates on MATRIX_PG_TEST_DSN. Without a live Postgres the
    # tests skip and this file shows ~25% coverage; same treatment as
    # the primer/storage/postgres.py family in CI-with-DSN runs.
    "primer/scheduler/postgres.py",
    # FakeSandbox is a test seam (production-importable but only used by tests).
    "primer/workspace/sandbox/fake.py",
    # ContainerRuntimeAdapter ABC has no concrete impls in Phase A.
    "primer/workspace/runtime/adapter.py",
    # Runtime adapters need real Docker/Podman/containerd daemons;
    # gated contract tests cover them when env vars are set.
    "primer/workspace/runtime/docker.py",
    "primer/workspace/runtime/podman.py",
    "primer/workspace/runtime/containerd/adapter.py",
    # K8s backend needs a real cluster; gated integration tests.
    "primer/workspace/k8s/sandbox.py",
    "primer/workspace/k8s/backend.py",
]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
# Per-module overrides — adapter modules ramp up to 90% as they land.
# Until primer/llm/* and primer/embedder/* contain code, the gate is
# effectively a no-op because there are no covered statements yet.
