[project]
name = "primer"
version = "0.0.1"
description = "Microagents framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiodocker>=0.27.0",
    "aiosqlite>=0.22.1",
    "aiohttp>=3.14.1",
    "anthropic>=0.109.1",
    "argon2-cffi>=25.1.0",
    "itsdangerous>=2.2.0",
    "asyncpg>=0.31.0",
    "croniter>=6.2.2",
    "ddgs>=9.14.4",
    "docling>=2.102.1",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "grpcio>=1.81.1",
    "jinja2>=3.1.6",
    "jsonschema>=4.26.0",
    "kubernetes-asyncio>=36.1.0",
    "lancedb>=0.33.0",
    "mcp>=1.27.2",
    "ollama>=0.6.2",
    "openai>=2.41.1",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-asyncpg>=0.63b1",
    "opentelemetry-instrumentation-httpx>=0.63b1",
    "prometheus-client>=0.25.0",
    "mini-racer>=0.14.1",
    "pgvector>=0.4.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "regopy>=1.4.0",
    "discord.py>=2.7.1",
    "python-telegram-bot>=22.8",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.5.1",
    "slack-bolt>=1.28.0",
    "slack-sdk>=3.42.0",
    "tiktoken>=0.13.0",
    "trafilatura>=2.1.0",
    "transformers>=5.8.1",
    "typer>=0.21.2",
    "tzdata>=2026.2",
    "uvicorn[standard]>=0.49.0",
    "opentelemetry-instrumentation-logging>=0.63b1",
]

[project.scripts]
primer = "primer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["primectl"]

[tool.hatch.build.targets.wheel]
packages = ["primer"]

[dependency-groups]
dev = [
    "grpcio-tools>=1.81.1",
    "playwright>=1.60.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-playwright>=0.8.0",
    "pytest-xdist>=3.8.0",
    "respx>=0.23.1",
    "testcontainers[postgres]>=4.14.2",
]
docs = [
    "markdown-it-py>=3",
    "mdit-py-plugins>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = [".", "runtime"]
# tests/e2e/ is skipped unless PRIMER_RUN_E2E=1 is set in the environment
# (see tests/e2e/conftest.py). The harness sets the env var; default unit
# runs do not, so contributors running `uv run pytest` aren't bothered by
# the e2e tests' need for a live server.
# tests/distributed/ requires testcontainers + Docker; opt in with
# `uv run pytest tests/distributed/ -m distributed`. Default runs skip them.
#
# Parallel by default: `-n auto` fans the suite across all CPU cores via
# pytest-xdist, taking the full unit sweep from ~7 min to ~90 s. We use
# `--dist loadscope` (group a module's tests onto one worker) rather than
# the default per-test `load`: a few tests/api modules rely on
# module/class-scoped fixtures that break when their tests are split
# across workers. To debug a single test serially, override with `-n0`
# (e.g. `uv run pytest tests/api/test_chats.py -n0`).
addopts = "-m 'not distributed' -n auto --dist loadscope"
markers = [
    "distributed: requires testcontainers + multiprocess (deselect with -m 'not distributed')",
    "smk(ids, status): map this test to one or more docs/tests SMK ids; status full|partial",
]

[tool.coverage.run]
source = ["primer"]
omit = [
    "primer/test.py",
    "primer/test_compaction.py",   # hand-driven LLM probe script (research/compaction.md)
    "primer/*/test_*.py",
    # Embedding data types — exercised once the embedder adapters and their
    # tests land in a later sub-project.
    "primer/model/embedding.py",
    # CLI entry point — only invoked via `python -m primer.api`; needs
    # a live Postgres to run, so not covered by the unit suite.
    "primer/api/__main__.py",
    # Typer CLI launcher — uvicorn invocation requires a live Postgres,
    # so the no-cover lines are the uvicorn.run() and main() shims.
    # The pure helpers (_load_config, _apply_logging) and the command
    # functions are exercised by tests/test_cli.py via a CliRunner with
    # uvicorn patched out.
    # Postgres scheduler — exercised by tests/scheduler/test_postgres.py
    # which gates on PRIMER_PG_TEST_DSN. Without a live Postgres the
    # tests skip and this file shows ~25% coverage; same treatment as
    # the primer/storage/postgres.py family in CI-with-DSN runs.
    "primer/scheduler/postgres.py",
    # FakeSandbox is a test seam (production-importable but only used by tests).
    "primer/workspace/sandbox/fake.py",
    # ContainerRuntimeAdapter ABC has no concrete impls in Phase A.
    "primer/workspace/runtime/adapter.py",
    # Runtime adapters need real Docker/Podman/containerd daemons;
    # gated contract tests cover them when env vars are set.
    "primer/workspace/runtime/docker.py",
    "primer/workspace/runtime/podman.py",
    "primer/workspace/runtime/containerd/adapter.py",
    # K8s backend needs a real cluster; gated integration tests.
    "primer/workspace/k8s/sandbox.py",
    "primer/workspace/k8s/backend.py",
]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
# Per-module overrides — adapter modules ramp up to 90% as they land.
# Until primer/llm/* and primer/embedder/* contain code, the gate is
# effectively a no-op because there are no covered statements yet.
