[project]
name = "primectl"
dynamic = ["version"]
description = "kubectl-style CLI for the Primer API"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "pyyaml>=6",
]

[project.scripts]
primectl = "primectl.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["primectl"]

[tool.hatch.version]
path = "primectl/__init__.py"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
