[project]
name = "primectl"
version = "0.0.1"
description = "kubectl-style CLI for the Primer API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "pyyaml>=6",
]

[project.scripts]
primectl = "primectl.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["primectl"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
