[project]
name = "matrix-runtime"
version = "1.0.0"
description = "Workspace runtime server — persistent in-container WS process"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11",
    "aionotify>=0.3",
    "pydantic>=2.13",
]

[project.scripts]
matrix-runtime = "matrix_runtime.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["matrix_runtime"]

[dependency-groups]
dev = [
    "matrix",
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
matrix = { path = "../" }
